# IMU_reader

./: CMakeLists.txt  README.md  RTIMULib.ini  build.sh  display_imu.cpp  make_arff.cpp  read_imu.cpp
scripts/: IMU_display.py  example_imu_script.py  podatki.py  read_data.py  slimmed_sense_hat.py
